<resources>
    <string name="app_name">AtekPos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="configure_device">Configure Device</string>
    <string name="atek_logo">atek_logo</string>
    <string name="loading">loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_area_creation">Service Area Creation</string>
    <string name="money_load">Money Load</string>
    <string name="leftarraow">LeftArraow</string>
    <string name="money_load_transaction">Money Load Transaction</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="amount">Amount</string>
    <string name="add_money">Add Money</string>
    <string name="balance_entry_transaction">Balance Entry Transaction</string>
    <string name="_0">₹0</string>
    <string name="check_balance">Check Balance</string>
    <string name="card_balance">Card Balance</string>
    <string name="purchase">Purchase</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="create_service">Create Service Area</string>
    <string name="start_balance_enquiry">Start Balance Enquiry</string>
    <string name="start_purchase">Start Purchase</string>
    <string name="present_card">Please present your card</string>
    <string name="okay">Okay</string>
    <string name="cash">Cash</string>
    <string name="account">Account</string>
    <string name="balance_update">Balance Update</string>
    <string name="update_balance">Update Balance</string>
    <string name="service_creation">Service Creation</string>
    <string name="service_id">Service ID</string>
    <string name="imagedesc">ImageDesc</string>
    <string name="cancel">Cancel</string>
    <string name="print">Print</string>
    <string name="mumbai_metro_one">Mumbai Metro One Pvt. Ltd.</string>
    <string name="transaction_number">Order No :</string>
    <string name="rrn">RRN :</string>
    <string name="transaction_amount">Amount :</string>
    <string name="payment_mode">Payment Mode :</string>
    <string name="chip_balance">Chip Balance :</string>
    <string name="__0">0</string>
    <string name="mmopl_pos">MMOPL POS</string>
    <string name="void_transaction">Void Transaction</string>
    <string name="send_message">Send Message</string>
    <string name="enter_something">Enter Something</string>
    <string name="chat">Chat</string>
</resources>